vpc.yml
---
AWSTemplateFormatVersion: 2010-09-09
Parameters:
  MyVpcCIDR:
    Description: CIDR block for VPC defaults to 10.45.0.0
    AllowedPattern: '((\d{1,3})\.){3}\d{1,3}'
    ConstraintDescription: Must be an IP address in the form x.x.x.x
    Type: String
    Default: 10.45.0.0

Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Join [ '', [!Ref MyVpcCIDR, '/16']]
      EnableDnsSupport: true
      EnableDnsHostnames: true
      InstanceTenancy: default
      Tags:
      - Key: Name
        Value: !Ref AWS::StackName
  InternetGateway:
    Type: AWS::EC2::InternetGateway
  VPCGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway
  PublicSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select
        - 0
        - !GetAZs 
          Ref: 'AWS::Region'
      VpcId: !Ref VPC
      CidrBlock: !Select [0, !Cidr [ !Join [ '', [!Ref MyVpcCIDR, '/16']], 16, 12]]
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Join 
            - ''
            - - !Ref AWS::StackName
              - '-subnet-public'
  PrivateSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select
        - 1
        - !GetAZs 
          Ref: 'AWS::Region'
      VpcId: !Ref VPC
      CidrBlock: !Select [1, !Cidr [ !Join [ '', [!Ref MyVpcCIDR, '/16']], 16, 12]]
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Join 
            - ''
            - - !Ref AWS::StackName
              - '-subnet-private'

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
  InternetRoute:
    Type: AWS::EC2::Route
    DependsOn: VPCGatewayAttachment
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway
      RouteTableId: !Ref PublicRouteTable
  PublicSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet
t
  PrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
      - Key: Name
        Value: PrivateRouteTbl
  PrivateSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      SubnetId: !Ref PrivateSubnet

  MySecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Ref AWS::StackName
      GroupDescription: Allows traffic on port 8080 into the ECS container VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '8080'
          ToPort: '8080'
          CidrIp: 0.0.0.0/0
      Tags:
      - Key: Name
        Value: !Ref AWS::StackName

  MyServiceDiscovery:
    Type: AWS::ServiceDiscovery::PrivateDnsNamespace
    Properties: 
      Description: Microservice discovery service
      Name: AWS::StackName
      Vpc: !Ref VPC
  

Outputs:
  VPC:
    Description: VPC ID for the ECS service
    Value: !Ref VPC
    Export:
      Name: !Join [ ":", [ !Ref "AWS::StackName", VpcID ] ]
  PublicSubnetCIDR:
    Description: CIDR block of the public subnet
    Value: !Ref PublicSubnet
    Export:
      Name: !Join [ ":", [ !Ref "AWS::StackName", PublicSubnetCIDR ] ]
  PrivateSubnetCIDR:
    Description: CIDR block of the private subnet
    Value: !Ref PrivateSubnet
    Export:
      Name: !Join [ ":", [ !Ref "AWS::StackName", PrivateSubnetCIDR ] ]
  SecurityGroupName:
    Description: Security group name
    Value: !Ref MySecurityGroup
    Export:
      Name: !Join [ ":", [ !Ref "AWS::StackName", SecurityGroupName ] ]
